fix: scroll bar ui (#8152)
* fix: scroll bar ui

* feat: optimize request tab scrollbar

--- a/packages/insomnia/src/ui/css/main.css
+++ b/packages/insomnia/src/ui/css/main.css
@@ -2960,6 +2960,10 @@ input.editable {
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
+.scrollbar-thin::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
 .shortcuts td.options {
   width: 0.1em;
 }
