--- a/packages/insomnia/src/ui/css/styles.css
+++ b/packages/insomnia/src/ui/css/styles.css
@@ -13,10 +13,6 @@
 @tailwind utilities;
 
 
-[data-platform="darwin"] * {
-  scrollbar-width: thin;
-}
-
 html {
   font-size: 11px;
 }
